--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.timeline__elements-headings-container,
+.timeline__elements-images-outer-container {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  column-gap: 6rem;
+  position: relative;
+  width: 100%;
+}
+
 :root {
   --bg-blocks: #ffdee3;
 
@@ -77,6 +86,7 @@ footer span {
     radial-gradient(farthest-side, var(--accent-btn) 94%, #0000) top/8px 8px no-repeat,
     conic-gradient(#0000 30%, var(--accent-btn));
   -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
   animation: l13 1s infinite linear;
 }
 
@@ -137,20 +147,48 @@ footer span {
   scroll-behavior: smooth;
 }
 
+
 .scroll-indicator {
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
+  font-size: 24px;
+  border-radius: 8px;
+  cursor: pointer;
+  padding: 10px;
   position: absolute;
   top: 50%;
-  opacity: 0.7;
   transform: translateY(-50%);
-  font-size: 30px;
-  color: rgba(0, 0, 0);
-  pointer-events: none;
-  /* Prevent interaction */
-  z-index: 3;
-  padding: 1rem;
-  line-height: 1;
-  border-radius: 100%;
+  z-index: 2;
+}
 
+.modal-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  gap: 16px;
+}
+
+.modal-button {
+  width: 100%;
+  padding: 8px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+
+}
+
+.modal-button-yes {
+  background: var(--accent-btn);
+  color: white;
+}
+
+.modal-button-yes:hover {
+  background: var(--accent-btn-hover);
+  transition: 0.3s;
 }
 
 .scroll-indicator.left {
@@ -161,14 +199,18 @@ footer span {
   right: 10px;
 }
 
-.timeline__elements-headings-container,
-.timeline__elements-images-outer-container {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  column-gap: 6rem;
-  position: relative;
-  width: 100%;
+.scroll-indicator:hover {
+  background: rgba(0, 0, 0, 0.8);
 }
+
+.scroll-indicator.left {
+  left: 10px;
+}
+
+.scroll-indicator.right {
+  right: 10px;
+}
+
 
 .timeline__element-date {
   padding: 0 3rem;
@@ -252,6 +294,7 @@ span.timeline__images-date {
 .slider__image {
   -webkit-user-drag: none;
   -moz-user-select: none;
+  user-select: none;
 }
 
 .close-btn {
