--- a/src/App.css
+++ b/src/App.css
@@ -328,3 +328,39 @@ span.timeline__images-date {
   background: var(--accent-btn-hover);
   transition: 0.3s;
 }
+
+@media screen and (max-width: 768px) {
+  footer span, .header__slogan {
+    font-size: 1rem;
+  }
+  .timeline__element-date {
+    font-size: 1.2rem;
+    height: 50px;
+    width: 100%;
+  }
+
+  .timeline__images-title {
+    font-size: 1.4rem !important;
+  }
+  .App {
+    padding: 0 1.5rem;
+  }
+  .timeline__images-inner {
+    padding: 0.85rem;
+    gap: 0.8rem;
+    width: unset;
+  }
+  .timeline__element-images-container {
+    max-width: 90vw;
+  }
+  .timeline__main-inner-grid {
+    row-gap: 1.5rem;
+  }
+
+  .timeline__elements-headings-container, .timeline__elements-images-outer-container {
+    column-gap: 3rem;
+  }
+  .scroll-indicator {
+    display: none;
+  }
+}
