--- a/src/App.css
+++ b/src/App.css
@@ -116,13 +116,6 @@ footer span {
   padding: 3rem 0;
 }
 
-@media screen and (max-width: 768px) {
-  .App {
-    max-width: 90vw;
-    margin: auto;
-  }
-}
-
 .timeline__main-grid {
   display: grid;
   width: 100%;
@@ -343,15 +336,19 @@ span.timeline__images-date {
     font-size: 1.4rem !important;
   }
   .App {
-    padding: 0 1.5rem;
+    padding: 1.5rem 0 0 1.5rem;
   }
   .timeline__images-inner {
     padding: 0.85rem;
-    gap: 0.8rem;
+    gap: 0.6rem;
     width: unset;
   }
+  .timeline__images-inner span,.read-more-btn {
+    font-size: 1rem;
+  }
   .timeline__element-images-container {
-    max-width: 90vw;
+    max-width: 350px;
+    gap: 1rem
   }
   .timeline__main-inner-grid {
     row-gap: 1.5rem;
